Version 16.82 - 13 April 2015

- diskdrake:
  o detect Lenovo recovery & 'SYSTEM_DRV' as such (mga#1371)
  o do add a ESP if it was removed by "Clear All"
  o ignore ESP for "use free space on MS"
- drakboot:
  o default to GRUB_DISABLE_RECOVERY=falss for 'failsafe' entry (mga#15675)

Version 16.81 - 12 April 2015

- dont force 'p' for dmraid partitions,  it's conditional depending
  on device naming like dmraid, kpartx and kernel handles it
- diskdrake:
  o don't guess a drive letter for ESP partitions

Version 16.80 - 9 April 2015

- diskdrake:
  o don't guess a drive letter for recovery partitions (mga15636)
- drakboot:
  o check there's still some place on /boot with grub2 too
  o fix detecting grub2 on UEFI

Version 16.79 - 7 April 2015

- drakboot:
  o keep vga= parameter when switching to grub2 (mga#9888)

Version 16.78 - 7 April 2015

- drakboot:
  o fix installing grub2 on MBR (mga#15640)
    (regression introduced in 16.76)

Version 16.77 - 7 April 2015

- bootloader:
  o add 'noiswmd' to kernel command line to manage isw_ bios
    fakeraids with dmraid for now (instead of mdadm) (mga#11289, mga#14330)
  o allow btrfs for / without separate /boot with grub2 (mga#15374)
- partitioning wizard:
  o do not offer to select RAID as it result in a crash (mga#5800)

Version 16.76 - 3 April 2015

- drakboot:
  o log grub2-install failures (mga#15439)
- diskdrake:
  o really try to detect recovery partitions on GPT

Version 16.75 - 30 March 2015

- diskdrake:
  o better fix for fail to read too corrupted partition table
  o fix getting ESP with "use free space":
    make sure to not override /boot/EFI mount point with /media/win_X
  o make sure to check for existing ESP on all disks
  o relax checks for ESP
  o try to detect recovery partitions on GPT
- stage2:
  o revert changes made in 16.70 for a better fix to mga#13894

Version 16.74 - 27 March 2015

- diskdrake (GPT):
  o fix retrieving ntfs partitions as ntfs-3g instead of ntfs