@@ -1,3 +1,6 @@
+- enable firmware raids with dmraid/kpartx like we do on
+  live medias and on fully installed systems
+
 Version 16.82 - 13 April 2015
 
 - diskdrake:
